# ChangeLog for xfce-base/xfce4-settings
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-settings/ChangeLog,v 1.58 2010/11/07 10:40:21 ssuominen Exp $

*xfce4-settings-4.7.4 (07 Nov 2010)

  07 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-settings-4.7.4.ebuild:
  Version bump.

*xfce4-settings-4.7.3 (03 Nov 2010)

  03 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-settings-4.7.3.ebuild:
  Version bump.

  23 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-settings-4.7.2.ebuild:
  Make sure index.theme from sound-theme-freedesktop is available by
  depending on USE="sound" of media-libs/libcanberra wrt #323379.

*xfce4-settings-4.7.2 (05 Sep 2010)

  05 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-settings-4.7.2.ebuild:
  Version bump.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  xfce4-settings-4.6.5.ebuild:
  alpha/ia64/sparc stable wrt #323729

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> xfce4-settings-4.6.5.ebuild:
  Marked ppc stable for bug #323729.

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> xfce4-settings-4.6.5.ebuild:
  Stable for HPPA (bug #323729).

  02 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  xfce4-settings-4.6.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #308521

  23 Jul 2010; Markus Meier <maekke@gentoo.org> xfce4-settings-4.6.5.ebuild:
  arm stable, bug #323729

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-settings-4.6.5.ebuild:
  ppc64 stable wrt #323729

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  xfce4-settings-4.6.5.ebuild:
  x86 stable, bug 323729

  29 Jun 2010; Christoph Mende <angelos@gentoo.org>
  xfce4-settings-4.6.5.ebuild:
  Stable on amd64 wrt bug #323729

  04 Jun 2010; Guy Martin <gmsoft@gentoo.org>
  xfce4-settings-4.6.3-r1.ebuild:
  hppa stable, #308521

*xfce4-settings-4.6.5 (22 May 2010)

  22 May 2010; Christoph Mende <angelos@gentoo.org>