@@ -1,7 +1,9 @@
 AUX xfce4-settings-4.6.3-exo.patch 677 RMD160 cfd4cd31df25e62babea9d197c9bfbfd02d0df41 SHA1 27dc3571bdb8a6f63de8c4e0d24be17b5f000c3b SHA256 06be2fa459411bb42a03b49fb27bc8ae07d084e85995f6671f721aa750e4e4ae
 DIST xfce4-settings-4.6.5.tar.bz2 522389 RMD160 a8155346285921f3087795598989df287be8abb4 SHA1 c036cc2f3100a46b2649e678dff7c0106b219263 SHA256 1601b8d2cac5d931c39bed7e331c5bd91018d0e56663295e7a083a2c78fe168b
 DIST xfce4-settings-4.7.4.tar.bz2 644072 RMD160 4b08bcb302f4b6adf2cdbfaf8a2e8278fd98ffa1 SHA1 669d9d5a77bd8977d017dd75599a9f40f89cab92 SHA256 f581ec440978126fe056400469192a560f282db97d261d3cda1216b8cbc4780b
+DIST xfce4-settings-4.7.5.tar.bz2 650975 RMD160 1954111f882456a22b5b2f9187f5019c39230be6 SHA1 b2c70de7a89f6c3593aca8de3ed7e0771a0b317a SHA256 58c0dc461f8df07b285718f61b3fb86c939ab11457ecd17dfbc7abaf2db9e425
 EBUILD xfce4-settings-4.6.5.ebuild 1479 RMD160 6b4500b9c2a92a011b7f088fa1e7e0469bf23bdb SHA1 ab57ebec8f3b221e20c50a703176d75ad388c777 SHA256 7e8f90494b9993414c7c92fc7843b102a3bd899311884b69309fbdfa2d765c7a
 EBUILD xfce4-settings-4.7.4.ebuild 1431 RMD160 6a7a7506ee93ce1f275313bca12cd48f513ec49e SHA1 01af9974dcf3e149b17ec4149787f0fe7f8b6c9a SHA256 6b472858c5d23898f2da9b9df37981d60ea681a610d34ee538edbf9ec53f10b9
-MISC ChangeLog 7821 RMD160 7904a646d72469d0e4a78c8094bf4979ecabd96f SHA1 b9b8b40abe97e2d251e839955a8d5ebc2b48279a SHA256 1a23a0157fff8ebdbfcff90796c58288b1c96993d13eb123cba575a66238e1cd
+EBUILD xfce4-settings-4.7.5.ebuild 1431 RMD160 7b7820c0479165632ca76316f56c723618902669 SHA1 6feeeddeeaa58c4b4eb1b33284a414640668aad5 SHA256 794c71d8214e19d3db183124dfe6d849212527105f13a98cd1717163b7c8f717
+MISC ChangeLog 7961 RMD160 5060e34811739eb023b00de50d5efa4df4c9fc84 SHA1 4d64ebabe9ac7c5844d34b8c7ded255429941911 SHA256 49f23c653435cfad3015382af02916c7db4eeb129b8bf916fed5d993050082b8
 MISC metadata.xml 363 RMD160 2f66508d394f9cc14654775f3a0b117bc10d3ef5 SHA1 8a3e6715e41535ea04377624a621c9ada60fd5ff SHA256 2442135d806e37420f1904d5b32e8b7afe94ed212307d25667f363db06c558e3
